[tool.poetry]
name = "bilibili-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.2"
beautifulsoup4 = "^4.12.3"
colorama = "^0.4.6"
lxml = "^5.2.2"
PyYAML = "^6.0.2"
Brotli = "^1.1.0"
httpx = "^0.27.0"
qrcode = "^7.4.2"
requests = "^2.32.3"
apscheduler = "^3.10.4"
rsa = "^4.9"
pillow = "^10.4.0"
tqdm = "^4.66.5"
yarl = "^1.9.4"
pycryptodomex = "^3.20.0"
qrcode-terminal = "^0.8"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
